# sheriff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  mkdocs.yaml  policies.yaml  pyproject.toml  settings.yaml.example
.agent/rules/: python.md
.github/workflows/: ci.yaml
docs/: index.md
docs/api/: api.md  cloud_dns.md  config.md  gcp_inventory.md  policy_engine.md  sheriff.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: configuration.md  installation.md
docs/user-guide/: actions.md  filters.md  policies.md
schemas/: policies.schema.json  settings.schema.json
src/sheriff/: __init__.py  __main__.py  api.py  cloud_dns.py  config.py  gcp_inventory.py  main.py  policy_engine.py
